# VINS_Mobile

./: CMakeLists.txt  README.md
cmake/: FindBoostInternal.cmake  FindCeresInternal.cmake  FindJsonInternal.cmake  FindOpenCVInternal.cmake  FindRabbitMQInternal.cmake  SetPlatformVarsInternal.cmake
estimator/: CMakeLists.txt  VINS.cpp  VINS.hpp  vins_pnp.cpp  vins_pnp.hpp
estimator/factor/: imu_factor.h  imu_factor_pnp.h  integration_base.h  pose_local_parameterization.cpp  pose_local_parameterization.hpp
estimator/feature/: feature_manager.cpp  feature_manager.hpp  feature_tracker.cpp  feature_tracker.hpp
estimator/initial/: inital_sfm.cpp  inital_sfm.hpp  initial_aligment.cpp  initial_aligment.hpp  motion_estimator.cpp  motion_estimator.hpp
estimator/loop_closure/: TemplatedLoopDetector.h  demoDetector.h  keyfame_database.cpp  keyfame_database.h  keyframe.cpp  keyframe.h  loop_closure.cpp  loop_closure.h
estimator/utility/: consumer.cpp  consumer.h  global_param.cpp  global_param.hpp  producer.cpp  producer.h  utility.hpp
estimator/visualization/: delaunay.h  draw_result.cpp  draw_result.hpp  edge.h  triangle.h  vector2.h
ios_player/: CMakeLists.txt
ios_player/cmake/: Info.plist
ios_player/resources/: Main.storyboard
ios_player/src/: CameraUtils.h  CameraUtils.m  LoginController.h  LoginController.mm  ViewController.h  ViewController.mm
